@@ -1,18 +1,57 @@
 /* Copyright (c) 2010 Daniel Doubrovkine, All Rights Reserved
  *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
+ * The contents of this file is dual-licensed under 2 
+ * alternative Open Source/Free licenses: LGPL 2.1 or later and 
+ * Apache License 2.0. (starting with JNA version 4.0.0).
+ * 
+ * You can freely decide which license you want to apply to 
+ * the project.
+ * 
+ * You may obtain a copy of the LGPL License at:
+ * 
+ * http://www.gnu.org/licenses/licenses.html
+ * 
+ * A copy is also included in the downloadable source code package
+ * containing JNA, in file "LGPL2.1".
+ * 
+ * You may obtain a copy of the Apache License at:
+ * 
+ * http://www.apache.org/licenses/
+ * 
+ * A copy is also included in the downloadable source code package
+ * containing JNA, in file "AL2.0".
  */
 package com.sun.jna.platform.win32;
 
+import static com.sun.jna.platform.win32.WinBase.CREATE_FOR_DIR;
+import static com.sun.jna.platform.win32.WinBase.CREATE_FOR_IMPORT;
+import static com.sun.jna.platform.win32.WinNT.DACL_SECURITY_INFORMATION;
+import static com.sun.jna.platform.win32.WinNT.FILE_ALL_ACCESS;
+import static com.sun.jna.platform.win32.WinNT.FILE_GENERIC_EXECUTE;
+import static com.sun.jna.platform.win32.WinNT.FILE_GENERIC_READ;
+import static com.sun.jna.platform.win32.WinNT.FILE_GENERIC_WRITE;
+import static com.sun.jna.platform.win32.WinNT.GENERIC_EXECUTE;
+import static com.sun.jna.platform.win32.WinNT.GENERIC_READ;
+import static com.sun.jna.platform.win32.WinNT.GENERIC_WRITE;
+import static com.sun.jna.platform.win32.WinNT.GROUP_SECURITY_INFORMATION;
+import static com.sun.jna.platform.win32.WinNT.OWNER_SECURITY_INFORMATION;
+import static com.sun.jna.platform.win32.WinNT.PROTECTED_DACL_SECURITY_INFORMATION;
+import static com.sun.jna.platform.win32.WinNT.PROTECTED_SACL_SECURITY_INFORMATION;
+import static com.sun.jna.platform.win32.WinNT.SACL_SECURITY_INFORMATION;
+import static com.sun.jna.platform.win32.WinNT.SE_DACL_PROTECTED;
+import static com.sun.jna.platform.win32.WinNT.SE_SACL_PROTECTED;
+import static com.sun.jna.platform.win32.WinNT.STANDARD_RIGHTS_READ;
+import static com.sun.jna.platform.win32.WinNT.TOKEN_ADJUST_PRIVILEGES;
+import static com.sun.jna.platform.win32.WinNT.TOKEN_DUPLICATE;
+import static com.sun.jna.platform.win32.WinNT.TOKEN_IMPERSONATE;
+import static com.sun.jna.platform.win32.WinNT.TOKEN_QUERY;
+import static com.sun.jna.platform.win32.WinNT.UNPROTECTED_DACL_SECURITY_INFORMATION;
+import static com.sun.jna.platform.win32.WinNT.UNPROTECTED_SACL_SECURITY_INFORMATION;
+
+import java.io.ByteArrayOutputStream;
+import java.io.Closeable;
 import java.io.File;
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -23,28 +62,34 @@ import java.util.TreeMap;
 import com.sun.jna.Memory;
 import com.sun.jna.Native;
 import com.sun.jna.Pointer;
-import com.sun.jna.WString;
+import com.sun.jna.platform.win32.WinBase.FE_EXPORT_FUNC;
+import com.sun.jna.platform.win32.WinBase.FE_IMPORT_FUNC;
 import com.sun.jna.platform.win32.WinBase.FILETIME;
+import com.sun.jna.platform.win32.WinDef.BOOLByReference;
+import com.sun.jna.platform.win32.WinDef.DWORD;
+import com.sun.jna.platform.win32.WinDef.DWORDByReference;
+import com.sun.jna.platform.win32.WinDef.ULONG;
+import com.sun.jna.platform.win32.WinDef.ULONGByReference;
 import com.sun.jna.platform.win32.WinNT.ACCESS_ACEStructure;
+import com.sun.jna.platform.win32.WinNT.ACCESS_ALLOWED_ACE;
 import com.sun.jna.platform.win32.WinNT.ACL;
 import com.sun.jna.platform.win32.WinNT.EVENTLOGRECORD;
+import com.sun.jna.platform.win32.WinNT.GENERIC_MAPPING;
 import com.sun.jna.platform.win32.WinNT.HANDLE;
 import com.sun.jna.platform.win32.WinNT.HANDLEByReference;
+import com.sun.jna.platform.win32.WinNT.PRIVILEGE_SET;
 import com.sun.jna.platform.win32.WinNT.PSID;
 import com.sun.jna.platform.win32.WinNT.PSIDByReference;
 import com.sun.jna.platform.win32.WinNT.SECURITY_DESCRIPTOR_RELATIVE;
+import com.sun.jna.platform.win32.WinNT.SECURITY_IMPERSONATION_LEVEL;
 import com.sun.jna.platform.win32.WinNT.SID_AND_ATTRIBUTES;
 import com.sun.jna.platform.win32.WinNT.SID_NAME_USE;
+import com.sun.jna.platform.win32.WinNT.TOKEN_TYPE;
 import com.sun.jna.platform.win32.WinReg.HKEY;
 import com.sun.jna.platform.win32.WinReg.HKEYByReference;
 import com.sun.jna.ptr.IntByReference;
 import com.sun.jna.ptr.LongByReference;
 import com.sun.jna.ptr.PointerByReference;
-
-import static com.sun.jna.platform.win32.WinDef.BOOLByReference;
-import static com.sun.jna.platform.win32.WinDef.DWORD;
-import static com.sun.jna.platform.win32.WinDef.DWORDByReference;
-import static com.sun.jna.platform.win32.WinNT.*;
 
 
 /**
@@ -101,12 +146,12 @@ public abstract class Advapi32Util {
 
 		if (!result) {
 			switch (Kernel32.INSTANCE.GetLastError()) {
-			case W32Errors.ERROR_INSUFFICIENT_BUFFER:
-				buffer = new char[len.getValue()];
-				break;
+    			case W32Errors.ERROR_INSUFFICIENT_BUFFER:
+    				buffer = new char[len.getValue()];
+    				break;
 
-			default:
-				throw new Win32Exception(Native.getLastError());
+    			default:
+    				throw new Win32Exception(Native.getLastError());
 			}
 
 			result = Advapi32.INSTANCE.GetUserNameW(buffer, len);
@@ -266,9 +311,13 @@ public abstract class Advapi32Util {
 		if (!Advapi32.INSTANCE.ConvertSidToStringSid(sid, stringSid)) {
 			throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
 		}
-		String result = stringSid.getValue().getWideString(0);
-		Kernel32.INSTANCE.LocalFree(stringSid.getValue());
-		return result;
+
+		Pointer ptr = stringSid.getValue();
+		try {
+			return ptr.getWideString(0);
+		} finally {
+		    Kernel32Util.freeLocalMemory(ptr);
+		}
 	}
 
 	/**
@@ -284,7 +333,13 @@ public abstract class Advapi32Util {
 		if (!Advapi32.INSTANCE.ConvertStringSidToSid(sidString, pSID)) {
 			throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
 		}
-		return pSID.getValue().getBytes();
+
+		PSID value = pSID.getValue();
+		try {
+			return value.getBytes();
+		} finally {
+		    Kernel32Util.freeLocalMemory(value.getPointer());
+		}
 	}
 
 	/**
@@ -302,8 +357,13 @@ public abstract class Advapi32Util {
 		if (!Advapi32.INSTANCE.ConvertStringSidToSid(sidString, pSID)) {
 			throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
 		}
-		return Advapi32.INSTANCE.IsWellKnownSid(pSID.getValue(),
-				wellKnownSidType);
+
+		PSID value = pSID.getValue();
+		try {
+			return Advapi32.INSTANCE.IsWellKnownSid(value, wellKnownSidType);
+		} finally {
+		    Kernel32Util.freeLocalMemory(value.getPointer());
+		}
 	}
 
 	/**
@@ -321,7 +381,27 @@ public abstract class Advapi32Util {
 		return Advapi32.INSTANCE.IsWellKnownSid(pSID, wellKnownSidType);
 	}
 
+    /**
+     * Align cbAcl on a DWORD
+     * @param cbAcl size to align
+     * @return the aligned size
+     */
+    public static int alignOnDWORD(int cbAcl) {
+        return (cbAcl + (DWORD.SIZE - 1)) & 0xfffffffc;
+    }
+
 	/**
+     * Helper function to calculate the size of an ACE for a given PSID size
+     * @param sidLength length of the sid
+     * @return size of the ACE
+     */
+    public static int getAceSize(int sidLength) {
+        return Native.getNativeSize(ACCESS_ALLOWED_ACE.class, null)
+                + sidLength
+                - DWORD.SIZE;
+    }
+
+    /**
 	 * Get an account name from a string SID on the local machine.
 	 *
 	 * @param sidString
@@ -342,8 +422,7 @@ public abstract class Advapi32Util {
 	 * @return Account.
 	 */
 	public static Account getAccountBySid(String systemName, String sidString) {
-		return getAccountBySid(systemName, new PSID(
-				convertStringSidToSid(sidString)));
+		return getAccountBySid(systemName, new PSID(convertStringSidToSid(sidString)));
 	}
 
 	/**
@@ -434,27 +513,44 @@ public abstract class Advapi32Util {
 	 */
 	public static Account[] getCurrentUserGroups() {
 		HANDLEByReference phToken = new HANDLEByReference();
+		Win32Exception err = null;
 		try {
 			// open thread or process token
 			HANDLE threadHandle = Kernel32.INSTANCE.GetCurrentThread();
 			if (!Advapi32.INSTANCE.OpenThreadToken(threadHandle,
 					TOKEN_DUPLICATE | TOKEN_QUERY, true, phToken)) {
-				if (W32Errors.ERROR_NO_TOKEN != Kernel32.INSTANCE
-						.GetLastError()) {
-					throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+			    int rc = Kernel32.INSTANCE.GetLastError();
+				if (rc != W32Errors.ERROR_NO_TOKEN) {
+					throw new Win32Exception(rc);
 				}
+
 				HANDLE processHandle = Kernel32.INSTANCE.GetCurrentProcess();
 				if (!Advapi32.INSTANCE.OpenProcessToken(processHandle,
 						TOKEN_DUPLICATE | TOKEN_QUERY, phToken)) {
 					throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
 				}
 			}
+
 			return getTokenGroups(phToken.getValue());
+		} catch(Win32Exception e) {
+	        err = e;
+		    throw err;    // re-throw in order to invoke finally block
 		} finally {
-			if (phToken.getValue() != WinBase.INVALID_HANDLE_VALUE) {
-				if (!Kernel32.INSTANCE.CloseHandle(phToken.getValue())) {
-					throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+		    HANDLE hToken = phToken.getValue();
+			if (!WinBase.INVALID_HANDLE_VALUE.equals(hToken)) {
+				try {
+				    Kernel32Util.closeHandle(hToken);
+				} catch(Win32Exception e) {
+				    if (err == null) {
+				        err = e;
+				    } else {
+				        err.addSuppressed(e);
+				    }
 				}
+			}
+
+			if (err != null) {
+			    throw err;
 			}
 		}
 	}
@@ -592,9 +688,9 @@ public abstract class Advapi32Util {
 				&& rc != W32Errors.ERROR_INSUFFICIENT_BUFFER) {
 			throw new Win32Exception(rc);
 		}
-		return Native.toString(data);		
+		return Native.toString(data);
 	}
-	
+
 	/**
 	 * Get a registry REG_EXPAND_SZ value.
 	 *
@@ -655,7 +751,7 @@ public abstract class Advapi32Util {
 		}
 		return Native.toString(data);
 	}
-	
+
 	/**
 	 * Get a registry REG_MULTI_SZ value.
 	 *
@@ -728,7 +824,7 @@ public abstract class Advapi32Util {
 		}
 		return result.toArray(new String[0]);
 	}
-	
+
 	/**
 	 * Get a registry REG_BINARY value.
 	 *
@@ -789,7 +885,7 @@ public abstract class Advapi32Util {
 		}
 		return data;
 	}
-	
+
 	/**
 	 * Get a registry DWORD value.
 	 *
@@ -849,7 +945,7 @@ public abstract class Advapi32Util {
 		}
 		return data.getValue();
 	}
-	
+
 	/**
 	 * Get a registry QWORD value.
 	 *
@@ -877,7 +973,7 @@ public abstract class Advapi32Util {
 			}
 		}
 	}
-	
+
 	/**
 	 * Get a registry QWORD value.
 	 *
@@ -945,9 +1041,9 @@ public abstract class Advapi32Util {
 		byteData.write(0, lpData, 0, lpcbData.getValue());
 
 		if (lpType.getValue() == WinNT.REG_DWORD) {
-			result = new Integer(byteData.getInt(0));
+			result = Integer.valueOf(byteData.getInt(0));
 		} else if (lpType.getValue() == WinNT.REG_QWORD) {
-			result = new Long(byteData.getLong(0));
+			result = Long.valueOf(byteData.getLong(0));
 		} else if (lpType.getValue() == WinNT.REG_BINARY) {
 			result = byteData.getByteArray(0, lpcbData.getValue());
 		} else if ((lpType.getValue() == WinNT.REG_SZ)
@@ -1506,7 +1602,7 @@ public abstract class Advapi32Util {
 
 		return phkKey;
 	}
-	
+
 	/**
 	 * Close the registry key
 	 *
@@ -1660,11 +1756,12 @@ public abstract class Advapi32Util {
 	 *
 	 * @param hKey
 	 *            Current registry key.
+         * @param lpcbSecurityDescriptor security descriptor
 	 *
 	 * @return A InfoKey value object.
 	 */
 	public static InfoKey registryQueryInfoKey(HKEY hKey,
-			int lpcbSecurityDescriptor) {
+                                                   int lpcbSecurityDescriptor) {
 
 		InfoKey infoKey = new InfoKey(hKey, lpcbSecurityDescriptor);
 		int rc = Advapi32.INSTANCE.RegQueryInfoKey(hKey, infoKey.lpClass,
@@ -1708,6 +1805,7 @@ public abstract class Advapi32Util {
 	 *
 	 * @param hKey
 	 *            Current registry key.
+         * @param dwIndex
 	 *
 	 * @return A InfoKey value object.
 	 */
@@ -1755,13 +1853,14 @@ public abstract class Advapi32Util {
 	 * @return A environment block
 	 */
 	public static String getEnvironmentBlock(Map<String, String> environment) {
-		StringBuilder out = new StringBuilder();
+		StringBuilder out = new StringBuilder(environment.size() * 32 /* some guess about average name=value length*/);
 		for (Entry<String, String> entry : environment.entrySet()) {
-			if (entry.getValue() != null) {
-				out.append(entry.getKey() + "=" + entry.getValue() + "\0");
+		    String    key=entry.getKey(), value=entry.getValue();
+			if (value != null) {
+				out.append(key).append("=").append(value).append('\0');
 			}
 		}
-		return out.toString() + "\0";
+		return out.append('\0').toString();
 	}
 
 	/**
@@ -1892,7 +1991,7 @@ public abstract class Advapi32Util {
 				int count = _record.NumStrings.intValue();
 				long offset = _record.StringOffset.intValue();
 				while (count > 0) {
-					String s = pevlr.getWideString(0);
+					String s = pevlr.getWideString(offset);
 					strings.add(s);
 					offset += s.length() * Native.WCHAR_SIZE;
 					offset += Native.WCHAR_SIZE;
@@ -1988,20 +2087,23 @@ public abstract class Advapi32Util {
 
 		// @Override - @todo restore Override annotation after we move to source
 		// level 1.6
-		public Iterator<EventLogRecord> iterator() {
+		@Override
+        public Iterator<EventLogRecord> iterator() {
 			return this;
 		}
 
 		// @Override - @todo restore Override annotation after we move to source
 		// level 1.6
-		public boolean hasNext() {
+		@Override
+        public boolean hasNext() {
 			read();
 			return !_done;
 		}
 
 		// @Override - @todo restore Override annotation after we move to source
 		// level 1.6
-		public EventLogRecord next() {
+		@Override
+        public EventLogRecord next() {
 			read();
 			EventLogRecord record = new EventLogRecord(_pevlr);
 			_dwRead -= record.getLength();
@@ -2011,7 +2113,8 @@ public abstract class Advapi32Util {
 
 		// @Override - @todo restore Override annotation after we move to source
 		// level 1.6
-		public void remove() {
+		@Override
+        public void remove() {
 		}
 	}
 
@@ -2026,8 +2129,8 @@ public abstract class Advapi32Util {
 			repeat = false;
 			memory = new Memory(nLength);
 			IntByReference lpnSize = new IntByReference();
-			boolean succeded = Advapi32.INSTANCE.GetFileSecurity(new WString(
-					fileName), infoType, memory, nLength, lpnSize);
+			boolean succeded = Advapi32.INSTANCE.GetFileSecurity(
+					fileName, infoType, memory, nLength, lpnSize);
 
 			if (!succeded) {
 				int lastError = Kernel32.INSTANCE.GetLastError();
@@ -2094,7 +2197,7 @@ public abstract class Advapi32Util {
 
         final IntByReference lpnSize = new IntByReference();
         boolean succeeded = Advapi32.INSTANCE.GetFileSecurity(
-                new WString(absoluteFilePath),
+                absoluteFilePath,
                 infoType,
                 null,
                 0, lpnSize);
@@ -2108,8 +2211,8 @@ public abstract class Advapi32Util {
 
         final int nLength = lpnSize.getValue();
         final Memory securityDescriptorMemoryPointer = new Memory(nLength);
-        succeeded = Advapi32.INSTANCE.GetFileSecurity(new WString(
-                absoluteFilePath), infoType, securityDescriptorMemoryPointer, nLength, lpnSize);
+        succeeded = Advapi32.INSTANCE.GetFileSecurity(
+                absoluteFilePath, infoType, securityDescriptorMemoryPointer, nLength, lpnSize);
 
         if (!succeeded) {
             securityDescriptorMemoryPointer.clear();
@@ -2120,45 +2223,208 @@ public abstract class Advapi32Util {
     }
 
     /**
+     * Get a self relative security descriptor for the given object type. The value is returned in Memory
+     * @param absoluteObjectPath
+     *         A pointer to a null-terminated string that specifies the name of the object
+     *         from which to retrieve security information. For descriptions of the string
+     *         formats for the different object types, see SE_OBJECT_TYPE in
+     *         {@link AccCtrl.SE_OBJECT_TYPE}
+     * @param objectType
+     *         Object type referred to by the path. See  {@link AccCtrl.SE_OBJECT_TYPE} for valid definitions.
+     * @param getSACL
+     *         Get SACL of the object. See {@link Advapi32#GetNamedSecurityInfo} for process privilege requirements in getting the SACL.
+     * @return Memory containing the self relative security descriptor
+     */
+    public static Memory getSecurityDescriptorForObject(final String absoluteObjectPath, int objectType, boolean getSACL) {
+
+        int infoType = OWNER_SECURITY_INFORMATION
+                        | GROUP_SECURITY_INFORMATION
+                        | DACL_SECURITY_INFORMATION
+                        | (getSACL ? SACL_SECURITY_INFORMATION : 0);
+
+        PointerByReference ppSecurityDescriptor = new PointerByReference();
+
+        int lastError = Advapi32.INSTANCE.GetNamedSecurityInfo(
+		                absoluteObjectPath,
+		                objectType,
+		                infoType,
+		                null,
+		                null,
+		                null,
+		                null,
+		                ppSecurityDescriptor);
+
+        if (lastError != 0) {
+            throw new Win32Exception(lastError);
+        }
+
+        int nLength = Advapi32.INSTANCE.GetSecurityDescriptorLength(ppSecurityDescriptor.getValue());
+        Memory memory = new Memory(nLength);
+        Pointer secValue = ppSecurityDescriptor.getValue();
+        try {
+            byte[] data = secValue.getByteArray(0, nLength);
+            memory.write(0, data, 0, nLength);
+            return memory;
+        } finally {
+            Kernel32Util.freeLocalMemory(secValue);
+        }
+    }
+
+    /**
+     * Set a self relative security descriptor for the given object type.
+     *
+     * @param absoluteObjectPath
+     *         A pointer to a null-terminated string that specifies the name of the object
+     *         from which to retrieve security information. For descriptions of the string
+     *         formats for the different object types, see {@link AccCtrl.SE_OBJECT_TYPE}.
+     * @param objectType
+     *         Object type referred to by the path. See  {@link AccCtrl.SE_OBJECT_TYPE} for valid definitions.
+     * @param securityDescriptor
+     *         A security descriptor to set.
+     * @param setOwner
+     *         Set the owner. The owner is extracted from securityDescriptor and must be valid,
+     *         otherwise IllegalArgumentException is throw.
+     *         See {@link Advapi32#SetNamedSecurityInfo} for process privilege requirements in getting the OWNER.
+     * @param setGroup
+     *         Set the group. The group is extracted from securityDescriptor and must be valid,
+     *         otherwise IllegalArgumentException is throw.
+     * @param setDACL
+     *         Set the DACL. The DACL is extracted from securityDescriptor and must be valid,
+     *         otherwise IllegalArgumentException is throw.
+     * @param setSACL
+     *         Set the SACL. The SACL is extracted from securityDescriptor and must be valid,
+     *         otherwise IllegalArgumentException is throw.
+     *          See {@link Advapi32#SetNamedSecurityInfo} for process privilege requirements in getting the SACL.
+     * @param setDACLProtectedStatus
+     *         Set DACL protected status as contained within securityDescriptor.control.
+     * @param setSACLProtectedStatus
+     *         Set SACL protected status as contained within securityDescriptor.control.
+     */
+    public static void setSecurityDescriptorForObject(final String absoluteObjectPath,
+                                                      int objectType,
+                                                      SECURITY_DESCRIPTOR_RELATIVE securityDescriptor,
+                                                      boolean setOwner,
+                                                      boolean setGroup,
+                                                      boolean setDACL,
+                                                      boolean setSACL,
+                                                      boolean setDACLProtectedStatus,
+                                                      boolean setSACLProtectedStatus) {
+
+    	final PSID psidOwner = securityDescriptor.getOwner();
+    	final PSID psidGroup = securityDescriptor.getGroup();
+    	final ACL dacl = securityDescriptor.getDiscretionaryACL();
+    	final ACL sacl = securityDescriptor.getSystemACL();
+
+    	int infoType = 0;
+    	// Parameter validation and infoType flag setting.
+    	if (setOwner) {
+            if (psidOwner == null)
+                throw new IllegalArgumentException("SECURITY_DESCRIPTOR_RELATIVE does not contain owner");
+            if (!Advapi32.INSTANCE.IsValidSid(psidOwner))
+                throw new IllegalArgumentException("Owner PSID is invalid");
+            infoType |= OWNER_SECURITY_INFORMATION;
+        }
+
+        if (setGroup) {
+            if (psidGroup == null)
+                throw new IllegalArgumentException("SECURITY_DESCRIPTOR_RELATIVE does not contain group");
+            if (!Advapi32.INSTANCE.IsValidSid(psidGroup))
+                throw new IllegalArgumentException("Group PSID is invalid");
+            infoType |= GROUP_SECURITY_INFORMATION;
+        }
+
+        if (setDACL) {
+            if (dacl == null)
+                throw new IllegalArgumentException("SECURITY_DESCRIPTOR_RELATIVE does not contain DACL");
+            if (!Advapi32.INSTANCE.IsValidAcl(dacl.getPointer()))
+                throw new IllegalArgumentException("DACL is invalid");
+            infoType |= DACL_SECURITY_INFORMATION;
+        }
+
+        if (setSACL) {
+            if (sacl == null)
+                throw new IllegalArgumentException("SECURITY_DESCRIPTOR_RELATIVE does not contain SACL");
+            if (!Advapi32.INSTANCE.IsValidAcl(sacl.getPointer()))
+                throw new IllegalArgumentException("SACL is invalid");
+            infoType |= SACL_SECURITY_INFORMATION;
+        }
+
+    	/*
+    	 * Control bits SE_DACL_PROTECTED/SE_SACL_PROTECTED indicate the *ACL is protected. The *ACL_SECURITY_INFORMATION flags
+    	 * are meta flags for SetNamedSecurityInfo and are not stored in the SD.  If either *ACLProtectedStatus is set,
+    	 * get the current status from the securityDescriptor and apply as such, otherwise the ACL remains at its default.
+    	*/
+        if (setDACLProtectedStatus) {
+            if ((securityDescriptor.Control & SE_DACL_PROTECTED) != 0) {
+                infoType |= PROTECTED_DACL_SECURITY_INFORMATION;
+            }
+            else if ((securityDescriptor.Control & SE_DACL_PROTECTED) == 0) {
+                infoType |= UNPROTECTED_DACL_SECURITY_INFORMATION;
+            }
+        }
+
+        if (setSACLProtectedStatus) {
+            if ((securityDescriptor.Control & SE_SACL_PROTECTED) != 0) {
+                infoType |= PROTECTED_SACL_SECURITY_INFORMATION;
+        }
+            else if ((securityDescriptor.Control & SE_SACL_PROTECTED) == 0) {
+                infoType |= UNPROTECTED_SACL_SECURITY_INFORMATION;
+            }
+        }
+
+        int lastError = Advapi32.INSTANCE.SetNamedSecurityInfo(
+                         absoluteObjectPath,
+                         objectType,
+                         infoType,
+                         setOwner ? psidOwner.getPointer() : null,
+                         setGroup ? psidGroup.getPointer() : null,
+                         setDACL ? dacl.getPointer() : null,
+                         setSACL ? sacl.getPointer() : null);
+
+        if (lastError != 0) {
+            throw new Win32Exception(lastError);
+        }
+    }
+
+    /**
      * Checks if the current process has the given permission for the file.
      * @param file the file to check
      * @param permissionToCheck the permission to check for the file
      * @return true if has access, otherwise false
      */
     public static boolean accessCheck(File file, AccessCheckPermission permissionToCheck) {
-        boolean hasAccess = false;
-        final Memory securityDescriptorMemoryPointer = getSecurityDescriptorForFile(file.getAbsolutePath().replaceAll("/", "\\"));
+        Memory securityDescriptorMemoryPointer = getSecurityDescriptorForFile(file.getAbsolutePath().replace('/', '\\'));
 
-        HANDLEByReference openedAccessToken = null;
-        final HANDLEByReference duplicatedToken = new HANDLEByReference();
+        HANDLEByReference openedAccessToken = new HANDLEByReference();
+        HANDLEByReference duplicatedToken = new HANDLEByReference();
+        Win32Exception err = null;
         try{
-            openedAccessToken = new HANDLEByReference();
-
-            final int desireAccess = TOKEN_IMPERSONATE | TOKEN_QUERY | TOKEN_DUPLICATE | STANDARD_RIGHTS_READ;
-            if(!Advapi32.INSTANCE.OpenProcessToken(Kernel32.INSTANCE.GetCurrentProcess(), desireAccess, openedAccessToken)) {
+            int desireAccess = TOKEN_IMPERSONATE | TOKEN_QUERY | TOKEN_DUPLICATE | STANDARD_RIGHTS_READ;
+            HANDLE hProcess = Kernel32.INSTANCE.GetCurrentProcess();
+            if (!Advapi32.INSTANCE.OpenProcessToken(hProcess, desireAccess, openedAccessToken)) {
                 throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
             }
 
-            if(!Advapi32.INSTANCE.DuplicateToken(openedAccessToken.getValue(), SECURITY_IMPERSONATION_LEVEL.SecurityImpersonation, duplicatedToken)) {
+            if (!Advapi32.INSTANCE.DuplicateToken(openedAccessToken.getValue(), SECURITY_IMPERSONATION_LEVEL.SecurityImpersonation, duplicatedToken)) {
                 throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
             }
 
-            final GENERIC_MAPPING mapping = new GENERIC_MAPPING();
+            GENERIC_MAPPING mapping = new GENERIC_MAPPING();
             mapping.genericRead = new DWORD(FILE_GENERIC_READ);
             mapping.genericWrite = new DWORD(FILE_GENERIC_WRITE);
             mapping.genericExecute = new DWORD(FILE_GENERIC_EXECUTE);
             mapping.genericAll = new DWORD(FILE_ALL_ACCESS);
 
-            final DWORDByReference rights = new DWORDByReference(new DWORD(permissionToCheck.getCode()));
+            DWORDByReference rights = new DWORDByReference(new DWORD(permissionToCheck.getCode()));
             Advapi32.INSTANCE.MapGenericMask(rights, mapping);
 
-            final PRIVILEGE_SET privileges = new PRIVILEGE_SET(1);
+            PRIVILEGE_SET privileges = new PRIVILEGE_SET(1);
             privileges.PrivilegeCount = new DWORD(0);
-            final DWORDByReference privilegeLength = new DWORDByReference(new DWORD(privileges.size()));
+            DWORDByReference privilegeLength = new DWORDByReference(new DWORD(privileges.size()));
 
-            final DWORDByReference grantedAccess = new DWORDByReference();
-            final BOOLByReference result = new BOOLByReference();
-            if(!Advapi32.INSTANCE.AccessCheck(securityDescriptorMemoryPointer,
+            DWORDByReference grantedAccess = new DWORDByReference();
+            BOOLByReference result = new BOOLByReference();
+            if (!Advapi32.INSTANCE.AccessCheck(securityDescriptorMemoryPointer,
                     duplicatedToken.getValue(),
                     rights.getValue(),
                     mapping,
@@ -2166,23 +2432,435 @@ public abstract class Advapi32Util {
                 throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
             }
 
-            hasAccess = result.getValue().booleanValue();
-
+           return result.getValue().booleanValue();
+        } catch(Win32Exception e) {
+            err = e;
+            throw err;  // re-throw so finally block executed
         } finally {
-
-            if(openedAccessToken != null && openedAccessToken.getValue() != null) {
-                Kernel32.INSTANCE.CloseHandle(openedAccessToken.getValue());
+            try {
+                Kernel32Util.closeHandleRefs(openedAccessToken, duplicatedToken);
+            } catch(Win32Exception e) {
+                if (err == null) {
+                    err = e;
+                } else {
+                    err.addSuppressed(e);
+                }
             }
 
-            if(duplicatedToken != null && duplicatedToken.getValue() != null) {
-                Kernel32.INSTANCE.CloseHandle(duplicatedToken.getValue());
-            }
-
-            if(securityDescriptorMemoryPointer != null) {
+            if (securityDescriptorMemoryPointer != null) {
                 securityDescriptorMemoryPointer.clear();
+            }
+
+            if (err != null) {
+                throw err;
+            }
+        }
+    }
+
+    /**
+     * Gets a file's Security Descriptor. Convenience wrapper getSecurityDescriptorForObject.
+     *
+     * @param file
+     *         File object containing a path to a file system object.
+     * @param getSACL
+     *         Get the SACL. See {@link Advapi32#GetNamedSecurityInfo} for process privilege requirements in getting the SACL.
+     * @return The file's Security Descriptor in self relative format.
+     */
+    public static SECURITY_DESCRIPTOR_RELATIVE getFileSecurityDescriptor(File file, boolean getSACL)
+    {
+    	SECURITY_DESCRIPTOR_RELATIVE sdr = null;
+    	Memory securityDesc = getSecurityDescriptorForObject(file.getAbsolutePath().replaceAll("/", "\\"), AccCtrl.SE_OBJECT_TYPE.SE_FILE_OBJECT, getSACL);
+    	sdr = new SECURITY_DESCRIPTOR_RELATIVE(securityDesc);
+    	return sdr;
+    }
+
+    /**
+     * Sets a file's Security Descriptor. Convenience wrapper setSecurityDescriptorForObject.
+     * @param file
+     *         File object containing a path to a file system object.
+     * @param securityDescriptor
+     *         The security descriptor to set.
+     * @param setOwner
+     *         Set the owner. See {@link Advapi32#SetNamedSecurityInfo} for process privilege requirements in setting the owner.
+     * @param setGroup
+     *         Set the group.
+     * @param setDACL
+     *         Set the DACL.
+     * @param setSACL
+     *         Set the SACL. See {@link Advapi32#SetNamedSecurityInfo} for process privilege requirements in setting the SACL.
+     * @param setDACLProtectedStatus
+     *         Set DACL protected status as contained within securityDescriptor.control.
+     * @param setSACLProtectedStatus
+     *         Set SACL protected status as contained within securityDescriptor.control.     *
+     */
+    public static void setFileSecurityDescriptor(
+                        File file,
+                        SECURITY_DESCRIPTOR_RELATIVE securityDescriptor,
+                        boolean setOwner,
+                        boolean setGroup,
+                        boolean setDACL,
+                        boolean setSACL,
+                        boolean setDACLProtectedStatus,
+                        boolean setSACLProtectedStatus)
+    {
+    	setSecurityDescriptorForObject(file.getAbsolutePath().replaceAll("/", "\\"), AccCtrl.SE_OBJECT_TYPE.SE_FILE_OBJECT, securityDescriptor, setOwner, setGroup, setDACL, setSACL, setDACLProtectedStatus, setSACLProtectedStatus);
+    }
+
+    /**
+     * Encrypts a file or directory.
+     *
+     * @param file
+     *         The file or directory to encrypt.
+     */
+    public static void encryptFile(File file) {
+        String lpFileName = file.getAbsolutePath();
+        if (!Advapi32.INSTANCE.EncryptFile(lpFileName)) {
+            throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+        }
+    }
+
+    /**
+     * Decrypts an encrypted file or directory.
+     *
+     * @param file
+     *         The file or directory to decrypt.
+     */
+    public static void decryptFile(File file) {
+        String lpFileName = file.getAbsolutePath();
+        if (!Advapi32.INSTANCE.DecryptFile(lpFileName, new DWORD(0))) {
+            throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+        }
+    }
+
+    /**
+     * Checks the encryption status of a file.
+     *
+     * @param file
+     *         The file to check the status for.
+     * @return The status of the file.
+     */
+    public static int fileEncryptionStatus(File file) {
+        DWORDByReference status = new DWORDByReference();
+        String lpFileName = file.getAbsolutePath();
+        if (!Advapi32.INSTANCE.FileEncryptionStatus(lpFileName, status)) {
+            throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+        }
+        return status.getValue().intValue();
+    }
+
+    /**
+     * Disables or enables encryption of the specified directory and the files in
+     * it.
+     *
+     * @param directory
+     *         The directory for which to enable or disable encryption.
+     * @param disable
+     *         TRUE to disable encryption. FALSE to enable it.
+     */
+    public static void disableEncryption(File directory, boolean disable) {
+        String dirPath = directory.getAbsolutePath();
+        if (!Advapi32.INSTANCE.EncryptionDisable(dirPath, disable)) {
+            throw new Win32Exception(Native.getLastError());
+        }
+    }
+
+    /**
+     * Backup an encrypted file or folder without decrypting it. A file named
+     * "bar/sample.text" will be backed-up to "destDir/sample.text". A directory
+     * named "bar" will be backed-up to "destDir/bar". This method is NOT
+     * recursive. If you have an encrypted directory with encrypted files, this
+     * method must be called once for the directory, and once for each encrypted
+     * file to be backed-up.
+     *
+     * @param src
+     *         The encrypted file or directory to backup.
+     * @param destDir
+     *         The directory where the backup will be saved.
+     */
+    public static void backupEncryptedFile(File src, File destDir) {
+        if (!destDir.isDirectory()) {
+            throw new IllegalArgumentException("destDir must be a directory.");
+        }
+
+        ULONG readFlag = new ULONG(0); // Open the file for export (backup)
+        ULONG writeFlag = new ULONG(CREATE_FOR_IMPORT); // Import (restore) file
+
+        if (src.isDirectory()) {
+            writeFlag.setValue(CREATE_FOR_IMPORT | CREATE_FOR_DIR);
+        }
+
+        // open encrypted file for export
+        String srcFileName = src.getAbsolutePath();
+        PointerByReference pvContext = new PointerByReference();
+        if (Advapi32.INSTANCE.OpenEncryptedFileRaw(srcFileName, readFlag,
+                pvContext) != W32Errors.ERROR_SUCCESS) {
+            throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+        }
+
+        // read encrypted file
+        final ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+        FE_EXPORT_FUNC pfExportCallback = new FE_EXPORT_FUNC() {
+            @Override
+            public DWORD callback(Pointer pbData, Pointer pvCallbackContext,
+                                  ULONG ulLength) {
+                byte[] arr = pbData.getByteArray(0, ulLength.intValue());
+                try {
+                    outputStream.write(arr);
+                } catch (IOException e) {
+                    throw new RuntimeException(e);
+                }
+                return new DWORD(W32Errors.ERROR_SUCCESS);
+            }
+        };
+
+        if (Advapi32.INSTANCE.ReadEncryptedFileRaw(pfExportCallback, null,
+                pvContext.getValue()) != W32Errors.ERROR_SUCCESS) {
+            throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+        }
+
+        // close
+        try {
+            outputStream.close();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+        Advapi32.INSTANCE.CloseEncryptedFileRaw(pvContext.getValue());
+
+        // open file for import
+        String destFileName = destDir.getAbsolutePath() + File.separator
+                        + src.getName();
+        pvContext = new PointerByReference();
+        if (Advapi32.INSTANCE.OpenEncryptedFileRaw(destFileName, writeFlag,
+                pvContext) != W32Errors.ERROR_SUCCESS) {
+            throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+        }
+
+        // write encrypted file
+        final IntByReference elementsReadWrapper = new IntByReference(0);
+        FE_IMPORT_FUNC pfImportCallback = new FE_IMPORT_FUNC() {
+            @Override
+            public DWORD callback(Pointer pbData, Pointer pvCallbackContext,
+                                  ULONGByReference ulLength) {
+                int elementsRead = elementsReadWrapper.getValue();
+                int remainingElements = outputStream.size() - elementsRead;
+                int length = Math.min(remainingElements, ulLength.getValue().intValue());
+                pbData.write(0, outputStream.toByteArray(), elementsRead,
+                        length);
+                elementsReadWrapper.setValue(elementsRead + length);
+                ulLength.setValue(new ULONG(length));
+                return new DWORD(W32Errors.ERROR_SUCCESS);
+            }
+        };
+
+        if (Advapi32.INSTANCE.WriteEncryptedFileRaw(pfImportCallback, null,
+                pvContext.getValue()) != W32Errors.ERROR_SUCCESS) {
+            throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+        }
+
+        // close
+        Advapi32.INSTANCE.CloseEncryptedFileRaw(pvContext.getValue());
+    }
+
+    /**
+     * Convenience class to enable certain Windows process privileges
+     */
+    public static class Privilege implements Closeable {
+        /**
+         * If true, the thread is currently impersonating
+         */
+        private boolean currentlyImpersonating = false;
+
+        /**
+         * If true, the privileges have been enabled
+         */
+        private boolean privilegesEnabled = false;
+
+        /**
+         * LUID form of the privileges
+         */
+        private final WinNT.LUID[] pLuids;
+
+        /**
+         * Construct and enable a set of privileges
+         * @param privileges the names of the privileges in the form of SE_* from Advapi32.java
+         * @throws IllegalArgumentException
+         */
+        public Privilege(String... privileges) throws IllegalArgumentException, Win32Exception {
+            pLuids = new WinNT.LUID[privileges.length];
+            int i = 0;
+            for (String p : privileges) {
+                pLuids[i] = new WinNT.LUID();
+                if (!Advapi32.INSTANCE.LookupPrivilegeValue(null, p, pLuids[i])) {
+                    throw new IllegalArgumentException("Failed to find privilege \"" + privileges[i] + "\" - " + Kernel32.INSTANCE.GetLastError());
+                }
+                i++;
             }
         }
 
-        return hasAccess;
+        /**
+         * Calls disable() to remove the privileges
+         * @see java.io.Closeable#close()
+         */
+        @Override
+        public void close() {
+            this.disable();
+        }
+
+        /**
+         * Enables the given privileges. If required, it will duplicate the process token. No resources are left open when this completes. That is, it is
+         * NOT required to drop the privileges, although it is considered a best practice if you do not need it. This class is state full. It keeps track
+         * of whether it has enabled the privileges. Multiple calls to enable() without a drop() in between have no affect.
+         * @return pointer to self (Privilege) as a convenience for try with resources statements
+         * @throws Win32Exception
+         */
+        public Privilege enable() throws Win32Exception {
+            // Ignore if already enabled.
+            if (privilegesEnabled)
+                return this;
+
+            // Get thread token
+            final HANDLEByReference phThreadToken = new HANDLEByReference();
+
+            try {
+                phThreadToken.setValue(getThreadToken());
+                WinNT.TOKEN_PRIVILEGES tp = new WinNT.TOKEN_PRIVILEGES(pLuids.length);
+                for (int i = 0; i < pLuids.length; i++) {
+                    tp.Privileges[i] = new WinNT.LUID_AND_ATTRIBUTES(pLuids[i], new DWORD(WinNT.SE_PRIVILEGE_ENABLED));
+                }
+                if (!Advapi32.INSTANCE.AdjustTokenPrivileges(phThreadToken.getValue(), false, tp, 0, null, null)) {
+                    throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+                }
+                privilegesEnabled = true;
+            }
+            catch (Win32Exception ex) {
+                // If fails, clean up
+                if (currentlyImpersonating) {
+                    Advapi32.INSTANCE.SetThreadToken(null, null);
+                    currentlyImpersonating = false;
+                }
+                else {
+                    if (privilegesEnabled) {
+                        WinNT.TOKEN_PRIVILEGES tp = new WinNT.TOKEN_PRIVILEGES(pLuids.length);
+                        for (int i = 0; i < pLuids.length; i++) {
+                            tp.Privileges[i] = new WinNT.LUID_AND_ATTRIBUTES(pLuids[i], new DWORD(0));
+                        }
+                        Advapi32.INSTANCE.AdjustTokenPrivileges(phThreadToken.getValue(), false, tp, 0, null, null);
+                        privilegesEnabled = false;
+                    }
+                }
+                throw ex;
+            }
+            finally {
+                // Always close the thread token
+                if ((phThreadToken.getValue() != WinBase.INVALID_HANDLE_VALUE)
+                        && (phThreadToken.getValue() != null)) {
+                    Kernel32.INSTANCE.CloseHandle(phThreadToken.getValue());
+                    phThreadToken.setValue(null);
+                }
+            }
+            return this;
+        }
+
+        /**
+         * Disabled the prior enabled privilege
+         * @throws Win32Exception
+         */
+        public void disable() throws Win32Exception {
+            // Get thread token
+            final HANDLEByReference phThreadToken = new HANDLEByReference();
+
+            try {
+                phThreadToken.setValue(getThreadToken());
+                if (currentlyImpersonating) {
+                    Advapi32.INSTANCE.SetThreadToken(null, null);
+                }
+                else
+                {
+                    if (privilegesEnabled) {
+                        WinNT.TOKEN_PRIVILEGES tp = new WinNT.TOKEN_PRIVILEGES(pLuids.length);
+                        for (int i = 0; i < pLuids.length; i++) {
+                            tp.Privileges[i] = new WinNT.LUID_AND_ATTRIBUTES(pLuids[i], new DWORD(0));
+                        }
+                        Advapi32.INSTANCE.AdjustTokenPrivileges(phThreadToken.getValue(), false, tp, 0, null, null);
+                        privilegesEnabled = false;
+                    }
+                }
+            }
+            finally {
+                // Close the thread token
+                if ((phThreadToken.getValue() != WinBase.INVALID_HANDLE_VALUE)
+                        && (phThreadToken.getValue() != null)) {
+                    Kernel32.INSTANCE.CloseHandle(phThreadToken.getValue());
+                    phThreadToken.setValue(null);
+                }
+            }
+        }
+
+        /**
+         * Get a handle to the thread token. May duplicate the process token
+         * and set as the thread token if ther thread has no token.
+         * @return HANDLE to the thread token
+         * @throws Win32Exception
+         */
+        private HANDLE getThreadToken() throws Win32Exception {
+            // we need to create a new token here for the duplicate
+            final HANDLEByReference phThreadToken = new HANDLEByReference();
+            final HANDLEByReference phProcessToken = new HANDLEByReference();
+
+            try {
+                // open thread token
+                if (!Advapi32.INSTANCE.OpenThreadToken(Kernel32.INSTANCE.GetCurrentThread(),
+                        TOKEN_ADJUST_PRIVILEGES,
+                        false,
+                        phThreadToken)) {
+                    // OpenThreadToken may fail with W32Errors.ERROR_NO_TOKEN if current thread is anonymous. Check for that condition here. If not, throw an error.
+                    int lastError = Kernel32.INSTANCE.GetLastError();
+                    if (W32Errors.ERROR_NO_TOKEN != lastError) {
+                        throw new Win32Exception(lastError);
+                    }
+
+                    // Due to ERROR_NO_TOKEN, we need to open the process token to duplicate it, then set our thread token.
+                    if (!Advapi32.INSTANCE.OpenProcessToken(Kernel32.INSTANCE.GetCurrentProcess(), TOKEN_DUPLICATE, phProcessToken)) {
+                        throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+                    }
+
+                    // Process token opened, now duplicate
+                    if (!Advapi32.INSTANCE.DuplicateTokenEx(phProcessToken.getValue(),
+                            TOKEN_ADJUST_PRIVILEGES | TOKEN_IMPERSONATE,
+                            null,
+                            SECURITY_IMPERSONATION_LEVEL.SecurityImpersonation,
+                            TOKEN_TYPE.TokenImpersonation,
+                            phThreadToken)) {
+                        throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+                    }
+
+                    // And set thread token.
+                    if (!Advapi32.INSTANCE.SetThreadToken(null, phThreadToken.getValue())) {
+                        throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+                    }
+                    currentlyImpersonating = true;
+                }
+            }
+            catch (Win32Exception ex) {
+                // Close the thread token
+                if ((phThreadToken.getValue() != WinBase.INVALID_HANDLE_VALUE)
+                        && (phThreadToken.getValue() != null)) {
+                    Kernel32.INSTANCE.CloseHandle(phThreadToken.getValue());
+                    phThreadToken.setValue(null);
+                }
+                throw ex;
+            }
+            finally
+            {
+                // Always close the process token
+                if ((phProcessToken.getValue() != WinBase.INVALID_HANDLE_VALUE)
+                        && (phProcessToken.getValue() != null)) {
+                    Kernel32.INSTANCE.CloseHandle(phProcessToken.getValue());
+                    phProcessToken.setValue(null);
+                }
+            }
+
+            return phThreadToken.getValue();
+        }
     }
 }
